Infrastructure/aws/cloudformation/csye6225-cf-application.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Application Stack for CSYE 6225 - Fall 2018",
  "Parameters": {
    "NetworkStackNameParameter": {
      "Description": "Network Stack Name",
      "Type": "String"
    },
    "ApplicationStackNameParameter": {
      "Description": "Application Stack Name",
      "Type": "String"
    },
    "KeyName": {
      "Description": "EC2 KeyPair to enable SSH access to the instance",
      "Type": "AWS::EC2::KeyPair::KeyName"
    }
  },
  "Resources": {
    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-9887c6e7",
        "AvailabilityZone": "us-east-1a",
        "InstanceType": "t2.micro",
        "KeyName": {
          "Ref": "KeyName"
        },
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "\n",
              [
                "#!/bin/bash -xe ",
                "curl --silent --location https://rpm.nodesource.com/setup_8.x | bash -",
                "yum -y install nodejs",
                {
                  "Fn::Join": [
                    "",
                    [
                      "export RDS_HOSTNAME=",
                      {
                        "Fn::GetAtt": [
                          "RDSInstance",
                          "Endpoint.Address"
                        ]
                      },
                      " >> /etc/profile"
                    ]
                  ]
                },
                "export RDS_USERNAME=csye6225master >> /etc/profile",
                "export RDS_PASSWORD=csye6225password >> /etc/profile",
                "export RDS_PORT=3306 >> /etc/profile"
              ]
            ]
          }
        },
        "SubnetId": {
          "Fn::ImportValue": {
            "Fn::Sub": "${NetworkStackNameParameter}-PublicSubnetID1"
          }
        },
        "SecurityGroupIds": [
          {
            "Ref": "WebServerSecurityGroup"
          }
        ],
        "DisableApiTermination": false,
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "DeleteOnTermination": true,
              "VolumeSize": 20,
              "VolumeType": "gp2"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-csye6225-EC2Instance"
            }
          },
          {
            "Key": "CodeDeployTag",
            "Value": "Deploy"
          }
        ]
      }
    },
    "WebServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "csye6225-webapp",
        "GroupDescription": "Enable HTTP access via port 80, SSH access via port 22, HTTPS access via port 443",
        "VpcId": {
          "Fn::ImportValue": {
            "Fn::Sub": "${NetworkStackNameParameter}-VpcID"
          }
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-csye6225-WebAppSecurityGroup"
            }
          }
        ]
      }
    },
    "DBServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "csye6225-rds",
        "GroupDescription": "Allow TCP traffic on port 3306 for MySQL",
        "VpcId": {
          "Fn::ImportValue": {
            "Fn::Sub": "${NetworkStackNameParameter}-VpcID"
          }
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 3306,
            "ToPort": 3306,
            "SourceSecurityGroupId": {
              "Ref": "WebServerSecurityGroup"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-csye6225-DBSecurityGroup"
            }
          }
        ]
      }
    },
    "RDSSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for RDS Instances",
        "SubnetIds": [
          {
            "Fn::ImportValue": {
              "Fn::Sub": "${NetworkStackNameParameter}-PublicSubnetID1"
            }
          },
          {
            "Fn::ImportValue": {
              "Fn::Sub": "${NetworkStackNameParameter}-PrivateSubnetID1"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-csye6225-RDSSubnetGroup"
            }
          }
        ]
      }
    },
    "RDSInstance": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBName": "csye6225",
        "AllocatedStorage": "100",
        "DBInstanceClass": "db.t2.medium",
        "Engine": "MySQL",
        "MasterUsername": "csye6225master",
        "MasterUserPassword": "csye6225password",
        "MultiAZ": false,
        "DBInstanceIdentifier": "csye6225-spring2018",
        "PubliclyAccessible": false,
        "Port": "3306",
        "DBSubnetGroupName": {
          "Ref": "RDSSubnetGroup"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-csye6225-RDSInstance"
            }
          }
        ]
      }
    },
    "DynamoDBTable": {
      "Type": "AWS::DynamoDB::Table",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "Id",
            "AttributeType": "S"
          }
        ],
        "KeySchema": [
          {
            "AttributeName": "Id",
            "KeyType": "HASH"
          }
        ],
        "ProvisionedThroughput": {
          "ReadCapacityUnits": "1",
          "WriteCapacityUnits": "1"
        },
        "TableName": "csye6225",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-csye6225-DynamoDBTable"
            }
          }
        ]
      }
    },
    "S3Bucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "AccessControl": "PublicRead",
        "BucketName": "csye6225-fall2018-nitesh.me.csye6225.com",
        "VersioningConfiguration": {
          "Status": "Suspended"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-csye6225-S3Bucket"
            }
          }
        ]
      }
    }
  },
  "Outputs": {
    "EC2Instance": {
      "Description": "The EC2 Instance for Web Server",
      "Value": {
        "Ref": "EC2Instance"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-EC2InstanceID"
        }
      }
    },
    "WebServerSecurityGroup": {
      "Description": "The security group id for the Web Server",
      "Value": {
        "Ref": "WebServerSecurityGroup"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-WebServerSecurityGroupID"
        }
      }
    },
    "DBServerSecurityGroup": {
      "Description": "The security group id for the RDS Server",
      "Value": {
        "Ref": "DBServerSecurityGroup"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-DBServerSecurityGroupID"
        }
      }
    },
    "RDSInstance": {
      "Description": "The RDS Instance for Backend Database",
      "Value": {
        "Ref": "RDSInstance"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-RDSInstanceID"
        }
      }
    },
    "DynamoDBTable": {
      "Description": "The DynamoDBTableId",
      "Value": {
        "Ref": "DynamoDBTable"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-DynamoDBTableID"
        }
      }
    },
    "S3Bucket": {
      "Description": "The S3Bucket",
      "Value": {
        "Ref": "S3Bucket"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-S3BucketID"
        }
      }
    }
  }
}
